cmake_minimum_required (VERSION 3.13)
include (pico_sdk_import.cmake)
project (oled_project C CXX ASM)
set (CMAKE_C_STANDARD 11)
set (CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable (oled oled.c)
pico_add_extra_outputs (oled)
target_link_libraries (oled hardware_i2c pico_stdlib)
pico_enable_stdio_usb(oled 1)
pico_enable_stdio_uart(oled 0)

